--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-simple-typewriter": "^5.0.1",
+    "typewriter-effect": "^2.19.0",
     "yup": "^1.0.0"
   },
   "devDependencies": {
