--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^9.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-simple-typewriter": "^5.0.1",
