--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.6",
     "axios": "^1.3.4",
     "framer-motion": "^9.0.7",
     "react": "^18.2.0",
